<resources>
    <string name="app_name">MangaJet</string>
    <string name="title_history">History</string>
    <string name="title_for_you">For you</string>
    <string name="title_search">Search</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_settings">Settings</string>
    <string name="title_authorization">Authorization</string>
    <string name="title_AboutManga">About Manga</string>

    <!-- About manga fragments strings -->
    <string name="chapter_default_name">Chapter</string>
    <string name="fragment_title_about">About</string>
    <string name="fragment_title_chapters">Chapters</string>

    <!-- Strings, using in "History" activity -->
    <string name="history_fragment_no_mangas_text">No watched mangas yet</string>

    <!-- Strings, using in "Settings" activity -->
    <string name="setting_Settings">Settings</string>
    <string name="setting_cache">Cache options</string>
    <string name="setting_aboutapp">About app</string>
    <string name="setting_extra">Extra settings</string>

    <string name="aboutMangaFragmentTagsText">Tags</string>
    <string name="aboutMangaDescriptionText">Description</string>

    <!-- Strings, using in "Manga reader" activity -->
    <string name="manga_reader_bad_page">Can\'t upload some pages</string>
    <string name="manga_reader_refresh_page">Reload page</string>

    <!-- Strings, using in Search -->
    <string name="search_fragment_no_result_text">No result :(</string>
    <string name="search_hint">Write your search query here</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="search_set_sources">Set sources</string>
    <string name="cache_size_title">Cache size: </string>
    <string name="tag_search">Tag := </string>
    <string name="for_example">For example: </string>
    <!-- Strings, using in For you -->
    <string name="for_you_set_sources">Set sources</string>
    <string name="recommendations_fragment_no_recommendations">
        There are no mangas which we can recommend to you :(
    </string>
    <string name="channel_name">UpdateManga</string>
    <string name="channel_description">Channel for manga update notification</string>
    <string name="channel_id">mangaJetNotificationChannel</string>

    <!-- Strings, using in extras -->
    <string name="extra_maxSearchResInfo">Max mangas results in Search from every source</string>
    <string name="extra_maxForYouTagsInfo">Max recommended tags in \'For you\'</string>
    <string name="extra_maxForYouMangasInfo">Max recommended mangas for each recommended tag in \'For you\'</string>
    <string name="extra_nsfwInfo">Enable NSFW(not safe/suitable for work) content support</string>
</resources>
